# RiskPY

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  batch_policy_quotes.xlsx  bulk_quotes.csv  main.py  pyproject.toml  test_batch.py  test_headless.py  test_policy_quote.xlsx  test_simulation_gui.py  validate_riskpy.ipynb
.github/workflows/: ci.yml  publish.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  HOW_IT_WORKS.md  PUBLISHING.md  TUTORIALS.md  USE_CASES.md
examples/: auto_insurance_rater.py  batch_processing.py  catastrophe_model.py  life_annuity_pricing.py
riskpy/: __init__.py  app.py
src/: ActuarialMath.cpp  ActuarialMath.hpp  ExcelExporter.cpp  ExcelExporter.hpp  ExperienceRating.cpp  ExperienceRating.hpp  ExposureRating.cpp  ExposureRating.hpp  FactorModel.cpp  FactorModel.hpp  Field.hpp  FourierMath.cpp  FourierMath.hpp  LossTriangle.cpp  LossTriangle.hpp  MonteCarlo.cpp  MonteCarlo.hpp  RateAnalyzer.cpp  RateAnalyzer.hpp  RiskEngine.cpp  RiskEngine.hpp  bindings.cpp
tests/: conftest.py  test_actuarial_math.py  test_app_batch.py  test_factor_model.py  test_factor_model_extra.py  test_fourier.py  test_loss_triangle.py  test_monte_carlo.py  test_oop_regression.py  test_package.py  test_rate_analyzer_extra.py  test_ratings.py  test_risk_engine.py
