[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11>=2.11.0"]
build-backend = "scikit_build_core.build"

[project]
name = "open-riskpy"
version = "0.2.1"
description = "A high-performance C++ powered actuarial pricing and underwriting framework."
readme = "README.md"
authors = [
  { name = "Josh", email = "josh@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
]

[tool.scikit-build]
wheel.packages = ["riskpy"]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
